Fix : progress bar align and value in script.js

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -277,9 +277,11 @@ form span{
 	padding : 30px 0px;
 }
 .skill{
+	position : relative;
 	width :200px;
 	float: left;
 	margin : 0 10px;
+	height : 70px;
 }
 .category{
 	color : rgba(255,255,255,0.5);
@@ -300,7 +302,10 @@ form span{
 	width: 150px;
 	height: 5px;
 	margin : 0 auto;
-	border-radius: 1em
+	border-radius: 1em;
+	position : absolute;
+	bottom : 0;
+	left : 10%;
 }
 .progress {
 	background-color : #47b7d5;
